--- a/pb_ntp.yml
+++ b/pb_ntp.yml
@@ -1,1 +1,7 @@
 ---
+- name: Setup NTP Service                                                                                                                                                       
+  hosts: all                                                                                                                                                                        
+  tasks:
+    - name: debug
+      debug:
+        msg: "Test"
