add   gather_facts: no

--- a/pb_ntp.yml
+++ b/pb_ntp.yml
@@ -1,6 +1,7 @@
 ---
 - name: Setup NTP Service                                                                                                                                                       
-  hosts: all                                                                                                                                                                        
+  hosts: all 
+  gather_facts: no                                                                                                                                                                       
   tasks:
   - name: "Set NTP Server {{ server }}"
     cisco.ios.ios_ntp:
